Fix bug where every second project would not be in column view on mobile layout.

--- a/src/styles/_mobile.scss
+++ b/src/styles/_mobile.scss
@@ -27,7 +27,7 @@
 			}
 		}
 		&.project {
-			flex-direction: column;
+			flex-direction: column !important;
 			align-items: stretch;
 			
 			& > div:nth-of-type(2) {
